# naga-lsp

./: Cargo.toml  README.md
src/: main.rs
vscode/: package-lock.json  package.json
vscode/client/src/: extension.ts
