[package]
name = "naga-lsp"
version = "0.1.0"
authors = ["Mikko Lehtonen <scoopr@iki.fi>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lsp-server="0.5.0"
lsp-types="0.86"
serde_json = "1.0.34"
serde = { version = "1.0.83", features = ["derive"] }
naga = {  git = "https://github.com/gfx-rs/naga.git", branch = "master",  features=["wgsl-in"] }
